# ros2-compose

./: Dockerfile  docker-compose.yaml  ros2_docker.sh
ros2_ws/: spawn_gazebo.launch.py
ros2_ws/install/chomp_motion_planner/lib/: libchomp_motion_planner.so.2.12.0
ros2_ws/install/moveit_core/lib/: libcollision_detector_bullet_plugin.so.2.12.0  libcollision_detector_fcl_plugin.so.2.12.0  libmoveit_acceleration_filter.so.2.12.0  libmoveit_butterworth_filter.so.2.12.0  libmoveit_collision_detection.so.2.12.0  libmoveit_collision_detection_bullet.so.2.12.0  libmoveit_collision_detection_fcl.so.2.12.0  libmoveit_collision_distance_field.so.2.12.0  libmoveit_constraint_samplers.so.2.12.0  libmoveit_distance_field.so.2.12.0  libmoveit_dynamics_solver.so.2.12.0  libmoveit_exceptions.so.2.12.0  libmoveit_kinematic_constraints.so.2.12.0  libmoveit_kinematics_metrics.so.2.12.0  libmoveit_planning_interface.so.2.12.0  libmoveit_planning_scene.so.2.12.0  libmoveit_robot_model.so.2.12.0  libmoveit_robot_state.so.2.12.0  libmoveit_robot_trajectory.so.2.12.0  libmoveit_ruckig_filter.so.2.12.0  libmoveit_smoothing_base.so.2.12.0  libmoveit_test_utils.so.2.12.0  libmoveit_trajectory_processing.so.2.12.0  libmoveit_transforms.so.2.12.0  libmoveit_utils.so.2.12.0
ros2_ws/install/moveit_hybrid_planning/lib/: libforward_trajectory_plugin.so.2.12.0  libmotion_planning_pipeline_plugin.so.2.12.0  (+6 more)
ros2_ws/log/: latest_build
ros2_ws/src/unnamed/: package.xml
ros2_ws/src/unnamed/submodels/floating_base/: package.xml
ros2_ws/src/unnamed/submodels/floating_base/urdf/: floatingbase.urdf
(+371 files in other folders)
