<package format="2">
  <name>floating_base</name>
  <version>def: None</version>
  <description>
    floating_base model - Processed by phobos-ci
  </description>
  <author>Tobias Hofmaenner tobias.hofmaenner@ferrovac.com</author>
  <maintainer>Tobias Hofmaenner tobias.hofmaenner@ferrovac.com</maintainer>
  <url></url>
  <buildtool_depend>catkin</buildtool_depend>
  <!--<depend>roslaunch</depend>-->
  <depend>robot_state_publisher</depend>
  <depend>rviz</depend>
  <depend>joint_state_publisher</depend>
  <!--<depend>gazebo</depend>-->
  <export>
    <architecture_independent />
  </export>
</package>